finished contact.html

--- a/contact.html
+++ b/contact.html
@@ -31,18 +31,16 @@
             </div>
 
             <div id="content">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam molestie justo id pellentesque
-                    ullamcorper. Vestibulum ex leo, tristique non aliquam in, porta non justo. Ut aliquam magna nec
-                    rutrum volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-                    Curae; Aenean ac augue hendrerit, finibus augue at, ultricies metus. Morbi egestas dignissim justo,
-                    et tincidunt metus consequat vitae. Maecenas metus nulla, vestibulum quis sapien vel, ullamcorper
-                    pulvinar nibh. Maecenas sodales, eros et rutrum sollicitudin, diam nulla suscipit lorem, nec
-                    vestibulum turpis nulla quis sem. Donec sodales convallis purus ut volutpat. Vestibulum et
-                    convallis turpis. Suspendisse id feugiat libero. Nunc sit amet nunc velit. Phasellus vel sem eget
-                    neque ultrices maximus eu ac justo. Vivamus porta arcu id purus consectetur, quis dictum ligula
-                    aliquet. Maecenas tempus sodales lorem in pharetra.
-                </p>
+                <form>
+                    <label>Name</label><br>
+                    <input type="text" name="name" style="width: 100%;"><br>
+                    <label>Email</label><br>
+                    <input type="text" name="email" style="width: 100%;"><br>
+                    <label>Message</label><br>
+                    <input type="text" name="message" style="width: 100%; height: 20em;"><br>
+                    <input type="submit" value="Submit" style="background-color: #4aaaa5; color: #ffffff; font-size: 1em; border: 0px; padding: .5em 2em .5em 2em; margin: 1em 0em 0em 0em;">
+                
+                </form>
             </div>
 
         </div>
