portfolio.html setup

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,18 +31,25 @@
             </div>
 
             <div id="content">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam molestie justo id pellentesque
-                    ullamcorper. Vestibulum ex leo, tristique non aliquam in, porta non justo. Ut aliquam magna nec
-                    rutrum volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-                    Curae; Aenean ac augue hendrerit, finibus augue at, ultricies metus. Morbi egestas dignissim justo,
-                    et tincidunt metus consequat vitae. Maecenas metus nulla, vestibulum quis sapien vel, ullamcorper
-                    pulvinar nibh. Maecenas sodales, eros et rutrum sollicitudin, diam nulla suscipit lorem, nec
-                    vestibulum turpis nulla quis sem. Donec sodales convallis purus ut volutpat. Vestibulum et
-                    convallis turpis. Suspendisse id feugiat libero. Nunc sit amet nunc velit. Phasellus vel sem eget
-                    neque ultrices maximus eu ac justo. Vivamus porta arcu id purus consectetur, quis dictum ligula
-                    aliquet. Maecenas tempus sodales lorem in pharetra.
-                </p>
+                <div class="portfolioShortcut" style="background-image: url(assets/images/disapprovingCat.jpg);">
+                    <a href="https://www.google.com">
+                    <div class="shortcutTitle">
+                        LinkedIn
+                    </div>
+                </a>
+                </div>
+
+                <div class="portfolioShortcut" style="background-image: url(assets/images/ubuntuLaptop.jpg);">
+                    <div class="shortcutTitle">
+                        Repositories
+                    </div>
+                </div>
+
+                <div class="portfolioShortcut" style="background-image: url(assets/images/capacitors.jpg);">
+                    <div class="shortcutTitle">
+                        Other
+                    </div>
+                </div>
             </div>
 
         </div>
