Portfolio.html shortcuts added

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,27 +31,34 @@
             </div>
 
             <div id="content">
-                <div class="portfolioShortcut" style="background-image: url(assets/images/disapprovingCat.jpg);">
-                    <a href="https://www.google.com">
-                    <div class="shortcutTitle">
-                        LinkedIn
-                    </div>
-                </a>
+                <div class="portfolioShortcut">
+                    <a href="https://www.linkedin.com/in/richard-z-hu/">
+                        <img src="assets/images/disapprovingCat.jpg" alt="LinkedIn" style="width: 320px; height: 240px;">
+                        <div class="shortcutTitle">
+                            LinkedIn
+                        </div>
+                    </a>
                 </div>
 
-                <div class="portfolioShortcut" style="background-image: url(assets/images/ubuntuLaptop.jpg);">
-                    <div class="shortcutTitle">
-                        Repositories
-                    </div>
+                <div class="portfolioShortcut">
+                    <a href="https://github.com/rzhanghu64">
+                        <img src="assets/images/ubuntuLaptop.jpg" alt="GitHub Repositories" style="width: 320px; height: 240px;">
+                        <div class="shortcutTitle">
+                            <p>GitHub Repositories</p>
+                        </div>
+                    </a>
                 </div>
 
-                <div class="portfolioShortcut" style="background-image: url(assets/images/capacitors.jpg);">
-                    <div class="shortcutTitle">
-                        Other
-                    </div>
+                <div class="portfolioShortcut">
+                    <a href="https://rzhanghu64.github.io/">
+                        <img src="assets/images/Octocat.jpg" alt="GitHub.io Project Page" style="width: 320px; height: 240px;">
+                        <div class="shortcutTitle">
+                            <p>GitHub Project Page</p>
+                        </div>
+                    </a>
                 </div>
+
             </div>
-
         </div>
     </div>
 
