profile pic added to index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
             <div id="content">
                 <p>
+                    <img src="assets/images/handsomeCat.jpg" style="float: left; width: 320px; height: 240px; margin: 0em 1em 1em 0em;">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam molestie justo id pellentesque
                     ullamcorper. Vestibulum ex leo, tristique non aliquam in, porta non justo. Ut aliquam magna nec
                     rutrum volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
